[Sync] Use ExtractIntegerValue to extract request_id from js args

The scenario is: chrome_sync.js passes integer request_id when calling
getAllNodes. SyncInternalsMessageHandler::HandleGetAllNodes tries to extract
this integer with GetInteger function.

The issue is that because on iOS numeric values are passed as double,
GetInteger fails and DCHECK gets triggered.

The fix is to call ExtractIntegerValue that correctly handles converting
double to int.

BUG=692834
R=pnoland@chromium.org

Review-Url: https://codereview.chromium.org/2698603003
Cr-Commit-Position: refs/heads/master@{#451831}

Former-commit-id: 80325c70ccf2bb0cc17cca4fe30f6eaae9e278dc